--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,12 +60,10 @@ jobs:
           name: Run tests
           command: |
             set -x
-            docker create -v /scripts -v /pcap --name stuff alpine:3.6 /bin/true
-            docker cp scripts/local.bro stuff:/scripts
+            docker create -v /usr/local/share/bro/site -v /pcap --name stuff alpine:3.6 /bin/true
+            docker cp scripts/local.bro stuff:/usr/local/share/bro/site
             docker cp pcap/heartbleed.pcap stuff:/pcap
             docker run --rm app --version
-            docker run --rm --entrypoint=sh app -c "ls -lah /scripts"
-            docker run --rm --entrypoint=sh app -c "cat /scripts/local.bro"
             docker run --name bro --volumes-from stuff app -r heartbleed.pcap local "Site::local_nets += { 192.168.11.0/24 }"
       - run:
           name: Review results
