update other 2.5 based tags

--- a/elastic/Dockerfile
+++ b/elastic/Dockerfile
@@ -1,30 +1,29 @@
-FROM gliderlabs/alpine:3.4
+FROM alpine:3.6
 
 LABEL maintainer "https://github.com/blacktop"
 
-ENV BRO_VERSION v2.5
+ENV BRO_VERSION v2.5.1
 
 COPY patches /tmp
 RUN apk-install zlib openssl libstdc++ libpcap geoip libgcc tini curl inotify-tools jq
-RUN apk-install -t .build-deps linux-headers \
-                                openssl-dev \
-                                libpcap-dev \
-                                python-dev \
-                                geoip-dev \
-                                zlib-dev \
-                                curl-dev \
-                                binutils \
-                                fts-dev \
-                                cmake \
-                                clang \
-                                bison \
-                                perl \
-                                make \
-                                flex \
-                                git \
-                                g++ \
-                                fts \
-  && set -x \
+RUN apk add --no-cache -t .build-deps \
+                          linux-headers \
+                          openssl-dev \
+                          libpcap-dev \
+                          python-dev \
+                          geoip-dev \
+                          zlib-dev \
+                          binutils \
+                          fts-dev \
+                          cmake \
+                          clang \
+                          bison \
+                          perl \
+                          make \
+                          flex \
+                          git \
+                          g++ \
+                          fts \
   && cd /tmp \
   && git clone --recursive --branch $BRO_VERSION git://git.bro.org/bro \
   && echo "===> Applying patches..." \
@@ -41,7 +40,9 @@ RUN apk-install -t .build-deps linux-headers \
   && make \
   && make install \
   && echo "===> Compiling af_packet plugin..." \
-  && cd /tmp/bro/aux/plugins/af_packet \
+  && cd /tmp/bro/aux/plugins \
+  && git clone https://github.com/J-Gras/bro-af_packet-plugin \
+  && cd /tmp/bro/aux/plugins/bro-af_packet-plugin \
   && make distclean \
   && CC=clang ./configure --with-kernel=/usr \
   && make \
