--- a/redis/Dockerfile
+++ b/redis/Dockerfile
@@ -59,6 +59,12 @@ RUN apk add --no-cache -t .build-deps \
   && rm -rf /tmp/* \
   && apk del --purge .build-deps
 
+# Install the GeoIPLite Database
+RUN mkdir -p /usr/share/GeoIP/ \
+  && GEOIP=geolite.maxmind.com/download/geoip/database \
+  && curl -s http://${GEOIP}/GeoLiteCity.dat.gz | zcat > /usr/share/GeoIP/GeoIPCity.dat \
+  && curl -s http://${GEOIP}/GeoLiteCityv6-beta/GeoLiteCityv6.dat.gz | zcat > /usr/share/GeoIP/GeoIPCityv6.dat
+
 ENV BROPATH .:/data/config:/usr/local/share/bro:/usr/local/share/bro/policy:/usr/local/share/bro/site
 
 VOLUME ["/pcap"]
