--- a/docker-compose.elastic.yml
+++ b/docker-compose.elastic.yml
@@ -21,4 +21,4 @@ services:
       - elasticsearch
     volumes:
       - ./pcap:/pcap
-    command: -P -r heartbleed.pcap local "Site::local_nets += { 192.168.11.0/24 }"
+    command: -r heartbleed.pcap local "Site::local_nets += { 192.168.11.0/24 }"
