--- a/docker-compose.kafka.yml
+++ b/docker-compose.kafka.yml
@@ -1,20 +1,12 @@
 version: '3'
 services:
   kafka:
-    image: blacktop/kafka:1.0
+    image: blacktop/kafka:0.11
     ports:
       - "9092:9092"
     environment:
       - KAFKA_ADVERTISED_HOST_NAME=localhost
-      - KAFKA_CREATE_TOPICS=bro:1:1:compact
-  kibana:
-    depends_on:
-      - elasticsearch
-    image: blacktop/kibana:5.6
-    ports:
-      - "5601:5601"
-    links:
-      - elasticsearch
+      - KAFKA_CREATE_TOPICS=bro:1:1
   bro:
     depends_on:
       - kafka
@@ -25,3 +17,11 @@ services:
     volumes:
       - ./pcap:/pcap
     command: -F -r heartbleed.pcap local "Site::local_nets += { 192.168.11.0/24 }"
+  consumer:
+    depends_on:
+      - kafka
+    image: blacktop/kafka:0.11
+    links:
+      - kafka:localhost
+    command: |
+      kafka-console-consumer.sh --bootstrap-server localhost:9092 --topic bro --from-beginning
