--- a/docker-compose.kafka.yml
+++ b/docker-compose.kafka.yml
@@ -1,16 +1,11 @@
 version: '3'
 services:
-  zookeeper:
-    image: blacktop/kafka:0.11
-    ports:
-      - "2181:2181"
-    command: zookeeper-server-start.sh config/zookeeper.properties
   kafka:
     image: blacktop/kafka:0.11
     ports:
       - "9092:9092"
-    links:
-      - zookeeper
+    networks:
+      - kafnet
     environment:
       - KAFKA_ADVERTISED_HOST_NAME=localhost
       - KAFKA_CREATE_TOPICS=bro:1:1
@@ -19,8 +14,23 @@ services:
       - kafka
     build: ./kafka
     image: blacktop/bro:kafka
+    networks:
+      - kafnet
     links:
-      - kafka:localhost
+      - "kafka:localhost"
     volumes:
       - ./pcap:/pcap
     command: -F -r heartbleed.pcap local "Site::local_nets += { 192.168.11.0/24 }"
+  consumer:
+    depends_on:
+      - kafka
+    build: ./tests/kafka-tools
+    image: blacktop/ktools:latest
+    networks:
+      - kafnet
+    links:
+      - "kafka:localhost"
+
+networks:
+  kafnet:
+    driver: bridge
